# csp-rest-api

./: CMakeLists.txt  LICENSE  README.md
gui/: example-web-frontend.html
src/: Plugin.cpp  Plugin.hpp  logger.cpp  logger.hpp
